test/invalid/baseline/enum-bodyless.txt
Syntax error at line 1 in enum-bodyless.webidl, since `enum X`:
enum X
      ^ Bodyless enum
